Add PWA manifest path into head

--- a/www/index.html
+++ b/www/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta name="theme-color" content="#08001b">
     <title>Flipper Lab</title>
+    <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" type="text/css" href="styles/styles.css">
     <script src="/libs/flv/flv.js"></script>
     <script src="/libs/split/split.min.js"></script>
