--- a/www/index.html
+++ b/www/index.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
+<!--
+    commit hash: ${SOURCE_COMMIT}
+    build date: ${BUILD_DATE}
+-->
 <html>
 <head>
     <meta charset="utf-8">
