Initial toggles and sidebar added

--- a/www/index.html
+++ b/www/index.html
@@ -188,6 +188,22 @@
                     <div class="console__body">
                         <div id="log" class="messages">
                         </div>
+                        <div class="console__body__sidebar">
+                            <div class="toggles">
+                                <div class="toggles__checkbox">
+                                    <input type="checkbox" id="toggle-bluetooth" class="toggle-checkbox hidden" checked>
+                                    <label for="toggle-bluetooth">bluetooth</label>
+                                </div>
+                                <div class="toggles__checkbox">
+                                    <input type="checkbox" id="toggle-rfid" class="toggle-checkbox hidden" checked>
+                                    <label for="toggle-rfid">rfid</label>
+                                </div>
+                                <div class="toggles__checkbox">
+                                    <input type="checkbox" id="toggle-rfid-3" class="toggle-checkbox hidden" checked>
+                                    <label for="toggle-rfid-3">rfid #3</label>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <form id="console-input-form">
                         <footer class="console__input">
