Console clear button added, input clears after successful send command

--- a/www/index.html
+++ b/www/index.html
@@ -206,6 +206,7 @@
                         <div class="actions">
                             <button id="reset-device" class="actions__action reset-device" title="Reset device"></button>
                             <button id="upload-firmware" class="actions__action upload-firmware" title="Upload Code"></button>
+                            <button id="clear-console" class="actions__action clear-console" title="Clear console"></button>
                             <button class="actions__action fullscreen-toggle" title="Toggle Fullscreen"></button>
                         </div>
                     </div>
